[page load metrics]: Ignore non HTTP/HTTPS resource loads

Bug: 738509
Change-Id: I0ee67acbfcda4d6ad608a8ecc194bc094ce381d6