chrome/browser/page_load_metrics/metrics_web_contents_observer.cc
@@ -274,6 +274,9 @@ void MetricsWebContentsObserver::OnRequestComplete(
     int64_t original_content_length,
     base::TimeTicks creation_time,
     int net_error) {
+  if (!url.SchemeIsHTTPOrHTTPS())
+    return;
+
   PageLoadTracker* tracker =
       GetTrackerOrNullForRequest(request_id, resource_type, creation_time);
   if (tracker) {
