chrome/browser/page_load_metrics/observers/page_load_metrics_observer_test_harness.h
@@ -27,6 +27,8 @@ class PageLoadMetricsObserverTestHarness
     : public ChromeRenderViewHostTestHarness,
       public test::WeakMockTimerProvider {
  public:
+  static const char kResourceUrl[];
+
   PageLoadMetricsObserverTestHarness();
   ~PageLoadMetricsObserverTestHarness() override;
 
