chrome/browser/page_load_metrics/observers/core_page_load_metrics_observer_unittest.cc
@@ -429,13 +429,13 @@ TEST_F(CorePageLoadMetricsObserverTest, Reload) {
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
 
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        true /*was_cached*/, 1024 * 20 /* raw_body_bytes */,
        0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
@@ -520,13 +520,13 @@ TEST_F(CorePageLoadMetricsObserverTest, ForwardBack) {
 
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        true /*was_cached*/, 1024 * 20 /* raw_body_bytes */,
        0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
@@ -605,13 +605,13 @@ TEST_F(CorePageLoadMetricsObserverTest, NewNavigation) {
 
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        true /*was_cached*/, 1024 * 20 /* raw_body_bytes */,
        0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
