chrome/browser/page_load_metrics/observers/data_reduction_proxy_metrics_observer_unittest.cc
@@ -424,7 +424,7 @@ TEST_F(DataReductionProxyMetricsObserverTest, OnCompletePingback) {
   // Verify LoFi is tracked when a LoFi response is received.
 
   page_load_metrics::ExtraRequestCompleteInfo resource = {
-      GURL(),
+      GURL(kResourceUrl),
       net::HostPortPair(),
       -1 /* frame_tree_node_id */,
       true /*was_cached*/,
@@ -468,24 +468,24 @@ TEST_F(DataReductionProxyMetricsObserverTest, ByteInformationCompression) {
   // Prepare 4 resources of varying size and configurations.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        true /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 10 /* original_network_content_length */, data->DeepCopy(),
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 5 /* original_network_content_length */, std::move(data),
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
@@ -529,24 +529,24 @@ TEST_F(DataReductionProxyMetricsObserverTest, ByteInformationInflation) {
   // Prepare 4 resources of varying size and configurations.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        true /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 * 10 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */, data->DeepCopy(),
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1 /* frame_tree_node_id */,
+      {GURL(kResourceUrl), net::HostPortPair(), -1 /* frame_tree_node_id */,
        false /*was_cached*/, 1024 * 40 * 5 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */, std::move(data),
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
