chrome/browser/page_load_metrics/observers/lofi_page_load_metrics_observer_unittest.cc
@@ -133,23 +133,23 @@ TEST_F(LoFiPageLoadMetricsObserverTest, LoFiNotSeen) {
   // LoFi set.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1, true /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, true /*was_cached*/,
        1024 * 40 /* raw_body_bytes */, 0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 10 /* original_network_content_length */, data->DeepCopy(),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 5 /* original_network_content_length */, std::move(data),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
@@ -193,23 +193,23 @@ TEST_F(LoFiPageLoadMetricsObserverTest, ClientLoFiSeen) {
   // client LoFi set.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1, true /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, true /*was_cached*/,
        1024 * 40 /* raw_body_bytes */, 0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 10 /* original_network_content_length */, data->DeepCopy(),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 5 /* original_network_content_length */, std::move(data),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
@@ -254,23 +254,23 @@ TEST_F(LoFiPageLoadMetricsObserverTest, ServerLoFiSeen) {
   // server LoFi set.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1, true /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, true /*was_cached*/,
        1024 * 40 /* raw_body_bytes */, 0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 10 /* original_network_content_length */, data->DeepCopy(),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 5 /* original_network_content_length */, std::move(data),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
@@ -320,23 +320,23 @@ TEST_F(LoFiPageLoadMetricsObserverTest, BothLoFiSeen) {
   // 1 has Server LoFi.
   page_load_metrics::ExtraRequestCompleteInfo resources[] = {
       // Cached request.
-      {GURL(), net::HostPortPair(), -1, true /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, true /*was_cached*/,
        1024 * 40 /* raw_body_bytes */, 0 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_SCRIPT, 0},
       // Uncached non-proxied request.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 /* original_network_content_length */,
        nullptr /* data_reduction_proxy_data */,
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .1 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 10 /* original_network_content_length */, std::move(data1),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
       // Uncached proxied request with .5 compression ratio.
-      {GURL(), net::HostPortPair(), -1, false /*was_cached*/,
+      {GURL(kResourceUrl), net::HostPortPair(), -1, false /*was_cached*/,
        1024 * 40 /* raw_body_bytes */,
        1024 * 40 * 5 /* original_network_content_length */, std::move(data2),
        content::ResourceType::RESOURCE_TYPE_IMAGE, 0},
